--- a/ss05-Auth/firestoreExample/cart.html
+++ b/ss05-Auth/firestoreExample/cart.html
@@ -15,7 +15,7 @@
     <section class="cart">
       <header class="header">
         <a href="index.html" title="Back to Store" style="font-size: 36px;" >Store</a>
-        <a class="cart-link" href="#" title="cart">
+        <a style="margin-left: auto;" class="cart-link" href="#" title="cart">
           <div class="cart-icon">
             <div class="cart-number"></div>
             <i class="fas fa-shopping-cart"></i>
