--- a/ss05-Auth/firestoreExample/index.html
+++ b/ss05-Auth/firestoreExample/index.html
@@ -45,7 +45,7 @@
           </div>
           <div class="text-field">
             <label for="price">Price</label>
-            <input autocomplete="off" type="number" name="price" placeholder="Price..."/>
+            <input autocomplete="off" type="number" name="price" min="1" placeholder="Price..."/>
           </div>
         </div>
         <div class="text-field">
